crates/control-plane-api/src/server/public/graphql/test/queries/snapshots/agent__integration_tests__graphql__queries__alice-live_specs_by_name.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
{
  "multiForward": {
    "edges": [
      {
        "node": {
          "catalogName": "aliceCo/shared/c",
          "liveSpec": {
            "catalogType": "collection",
            "isDisabled": false
          },
          "userCapability": "admin"
        }
      }
    ]
  },
  "multiReverse": {
    "edges": [
      {
        "node": {
          "catalogName": "aliceCo/shared/a",
          "liveSpec": {
            "catalogType": "collection",
            "isDisabled": false
          },
          "userCapability": "admin"
        }
      }
    ]
  }
}
