crates/control-plane-api/src/server/public/graphql/test/queries/snapshots/agent__integration_tests__graphql__queries__alice-live_specs_collection_connections_reverse.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
{
  "liveSpecs": {
    "edges": [
      {
        "node": {
          "catalogName": "aliceCo/shared/c",
          "liveSpec": {
            "readBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/materialize",
                  "node": {
                    "catalogName": "aliceCo/shared/materialize",
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false,
                "hasPreviousPage": false
              }
            },
            "writtenBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/capture",
                  "node": {
                    "catalogName": "aliceCo/shared/capture",
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false,
                "hasPreviousPage": true
              }
            }
          },
          "userCapability": "admin"
        }
      }
    ]
  }
}
