crates/control-plane-api/src/server/public/graphql/test/queries/snapshots/agent__integration_tests__graphql__queries__bob-live_specs_by_name.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: bob_result
---
{
  "multiForward": {
    "edges": [
      {
        "node": {
          "catalogName": "aliceCo/shared/c",
          "liveSpec": {
            "catalogType": "collection",
            "isDisabled": false
          },
          "userCapability": "read"
        }
      }
    ]
  },
  "multiReverse": {
    "edges": [
      {
        "node": {
          "catalogName": "aliceCo/shared/a",
          "liveSpec": {
            "catalogType": "collection",
            "isDisabled": false
          },
          "userCapability": "read"
        }
      }
    ]
  }
}
